Messaging using Scaledrone

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="receivedTxt">This is a sample message</string>
     <string name="sendTxt">This is a sent sample message</string>
     <string name="senderName">Abby</string>
+    <item name="editText" type="id" />
 </resources>
