--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
     <string name="app_name">Final_Mobile_Device_Programming</string>
     <string name="action_settings">Settings</string>
-    <string name="lblDirection">Create a group by entering their names and mobile numbers.</string>
-    <string name="txtNamelbl">Name</string>
-    <string name="txtPhonelbl">Phone</string>
-    <string name="btnSubmit">Add Person</string>
-    <string name="btnNxtScreen">Meet Your Group</string>
+    <string name="lblDirection">Find your location or Message a friend to find them </string>
+    <string name="btnSubmit">Message</string>
+    <string name="btnNxtScreen">Location</string>
     <string name="title_activity_generate_group">generateGroup</string>
     <string name="lblGroupIntro">Your group contains the following people: </string>
     <string name="btnTrack">Find your Location</string>
@@ -24,4 +22,5 @@
     <string name="map_add">Add</string>
     <string name="map_locate">Locate</string>
     <string name="map_clear">Clear</string>
+    <string name="map">Map</string>
 </resources>
